# UncertaintyMap

./: Dockerfile  README.md  instructions  instructions.md
data/: 1_20240117224142.mat  1_20240117230920.mat  1_20240117234634.mat  1_20240120211541.mat  (+44 more)
kf_slam/: .gitignore  CMakeLists.txt  Default.perspective  GET_data.py  KF.py  KF2.py  LEER_MATLAB  active_slam_core.py  active_slam_core_rrt.py  active_slam_core_test.py  base.rviz  box_plots_experiments.m  caratula_plotter.py  cerrar_docker.sh  cova1.csv  divergence08.csv  divergence1.csv  divergence12.csv  divergence_1_0.csv  entrar.sh  first_simulation.sh  frontiers_markers.py  galpon_experiments.perspective  gazebo_manager.py  inaut_plano.FCStd  inaut_plano.FCStd1  inaut_test.yaml  inaut_test_obs.yaml  insert_markers.py  instrucciones  instrucciones (seba-inaut's conflicted copy 2023-04-14)  k_means.py  keyboard_test.py  kmean_test.py  kmeans_test.py  local_map.py  log_test  map.rviz  map_server.py  master_control.perspective  (+40 more)
kf_slam/codigos_descargados/: kmeans_clustering.py
kf_slam/matlab/: Load_data_from_mat.m  cargar_simulaciones.m  circle_fit.m  divergence_test.m  fit_circle.m  fit_max_circle.m  fronteras_extendidas_algorithm.m  galpon_process.m  incertidumbre_montecarlo_p_vs_det.m  leerArchivoYAML.m  map_process.m  map_process_v2.m  read_from_yaml.m  signed_distance_function.m  simulacion_simplificada.m
ws/gazebo_ros_motors_v2/: CMakeLists.txt  package.xml
ws/gazebo_ros_motors_v2/cfg/: motorModel.cfg
ws/gazebo_ros_motors_v2/include/gazebo_ros_dc_motor/: gazebo_ros_dc_motor.h
ws/gazebo_ros_motors_v2/launch/: test.launch
ws/gazebo_ros_motors_v2/params/: dc_motor.yaml  joint_motor.yaml
ws/gazebo_ros_motors_v2/src/: gazebo_ros_dc_motor.cpp
ws/gazebo_ros_motors_v2/xacro/: dc_motor.xacro  test.xacro  test_v2.xacro
(+174 files in other folders)
